@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR
' Simplified UML class diagram for attendance
class Attendance {
  - eventId: EventId
  - memberName: Name
  - hasAttended: boolean
  + markAttended(): Attendance
  + markAbsent(): Attendance
}

class AddAttendanceCommand {
  - eventId: EventId
  - memberNames: List<Name>
  + execute(model: Model): CommandResult
}

class MarkAttendanceCommand {
  - eventId: EventId
  - memberNames: List<Name>
  + execute(model: Model): CommandResult
}

class UnmarkAttendanceCommand {
  - eventId: EventId
  - memberNames: List<Name>
  + execute(model: Model): CommandResult
}

class AttendanceMessages {
  {static} buildAddAttendanceResult(eventId, added, duplicates, missing)
  {static} buildMarkAttendanceResult(eventId, newlyMarked, alreadyMarked, missing)
  {static} buildUnmarkAttendanceResult(eventId, newlyAbsent, alreadyAbsent, missing)
  {static} buildRemoveAttendanceResult(eventId, removedMembers, missing)
}

class AttendanceCommandUtil {
  {static} collectAttendanceByName(model, eventId)
}

class Model {
  ...
}

AddAttendanceCommand --> AttendanceMessages : uses
AddAttendanceCommand --> Attendance : creates
AddAttendanceCommand --> Model : uses

MarkAttendanceCommand --> AttendanceMessages : uses
MarkAttendanceCommand --> AttendanceCommandUtil : uses
MarkAttendanceCommand --> Model : uses

UnmarkAttendanceCommand --> AttendanceMessages : uses
UnmarkAttendanceCommand --> AttendanceCommandUtil : uses
UnmarkAttendanceCommand --> Model : uses

@enduml
